# zorba-couchbase-module

./: .travis.yml  CMakeLists.txt  README.md
cmake_modules/: FindLibCouchbase.cmake
cmake_modules/Windows/: findLibCouchbase.cmake
examples/: example-put-data.xq  example.xq  example2.xq  example3.xq  example4.xq
install_couchbase/: install.cmake
src/: CMakeLists.txt  couchbase.xq
src/couchbase.xq.src/: couchbase.cpp  couchbase.h
test/ExpQueryResults/couchbase_module/: append-text.xml.res  create-view.xml.res  create-view2.xml.res  prepend-text.xml.res  store-binary.xml.res  store-binary2.xml.res  view.xml.res
test/Queries/couchbase_module/: append-text.xq  connect.xq  connect2.spec  connect2.xq  create-view.xq  create-view2.xq  disconnect.spec  disconnect.xq  expiration-time.xq  prepend-text.xq  remove.spec  remove.xq  replace-text.xq  store-binary.xq  store-binary2.xq  store-text-encoding.xq  store-text-encoding2.xq  store-text.xq  store-text2.xq  store-text3.spec  touch.xq  view.xq
test/couchbase/Queries/: test-binary.xq  test.xq
